# ubivat-tank

./: .gitignore  Makefile.am  _0_apt_prepare.sh  _1_create_configure  _1_create_configure.sh  _2_build  _2_build.sh  _2_build_and_install-debug  _2_build_and_install-debug.sh  _build  _clean  _clean.sh  _install-debug  configure.ac
base/: maps.lst
base/epics/: o_mess.bii  sground.bii  sw_brick.bii  sw_w0.bii  sw_w1.bii  swater0.bii  swater1.bii  swater2.bii  wground.bii
base/maps/: d2m01.mut  map01.mut  map02.mut  map03.mut  map04.mut  map05.mut  map06.mut  map07.mut  map08.mut  map09.mut  map10.mut  map11.mut  map12.mut  map13.mut  map14.mut  map15.mut  map16.mut  map17.mut  map18.mut  map19.mut  map20.mut  map21.mut  map22.mut  map23.mut  map24.mut  map25.mut
base/menu/: abort.bii  about.bii  arrowl.bii  arrowr.bii  case.bii  conback.bii  cur_0.bii  cur_1.bii  game.bii  interlv.bii  linel.bii  linem.bii  liner.bii  load.bii  mhlogo.bii  new_p1.bii  new_p2.bii  options.bii  quit.bii  save.bii
base/pics/: ammo_artillery.bii  ammo_mine.bii  ammo_missile.bii  b_mine.bii  b_rocket.bii  bull_bull.bii  e_small.bii  explode_big.bii  f_rus.bii  f_usa.bii  f_white.bii  hud_icon_tank0.bii  hud_icon_tank1.bii  hud_icon_tank2.bii  hud_icon_tank3.bii  hud_icon_tank4.bii  i_armor.bii  i_health.bii  i_star.bii  o_exit.bii  tank0.bii  tank1.bii  tank2.bii  tank3.bii  tank4.bii  water0.bii  water1.bii  world_brick.bii  world_w0.bii  world_w1.bii  world_water2.bii
docs/: readme866.txt  techinfo.txt
src/: Makefile.am  Z_mem.c  Z_mem.h  _gr2D.c  _gr2D.h  _gr2Don.c  _gr2Don.h  actions.c  actions.h  audio.c  audio.h  bull.c  bull.h  cl_game.c  cl_game.h  cl_input.c  cl_input.h  client.c  client.h  client_events.c  client_events.h  client_fsm.c  client_fsm.h  client_private.c  client_private.h  client_request.c  client_request.h  client_requests.c  client_requests.h  common_bstree.c  common_bstree.h  common_hash.c  common_hash.h  common_list2.h  ctrl.c  ctrl.h  defs.c  defs.h  eng_actions.c  eng_actions.h  (+108 more)
src/common/: common_bstree.h  common_hash.c  common_list2.h  common_queue.h
src/progs/: ent_bull.c  ent_bull.h  ent_exit.c  ent_exit.h  ent_explode.c  ent_explode.h  ent_items.c  ent_items.h  ent_message.c  ent_message.h  ent_player.c  ent_player.h  ent_player_think.c  ent_player_think.h  ent_spawn.c  ent_spawn.h  ent_weap.c  ent_weap.h  entities_includes.h  helpers.c  helpers.h  progs.h  progs_main.c  progs_main.h
