MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
src

ut_base_data_dir      = $(prefix)/share/games/ubivat-tank/base
ut_base_data__DATA    = ./base/maps.lst ./base/palette.pal

ut_base_maps_data_dir      = $(prefix)/share/games/ubivat-tank/base/maps
ut_base_maps_data__DATA    = ./base/maps/*

ut_base_menu_data_dir      = $(prefix)/share/games/ubivat-tank/base/menu
ut_base_menu_data__DATA    = ./base/menu/*

ut_base_pics_data_dir      = $(prefix)/share/games/ubivat-tank/base/pics
ut_base_pics_data__DATA    = ./base/pics/*
