MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
src


#datadir, sysconfdir, sharedstatedir, localstatedir, pkgdatadir


#utdatadir=$(prefix)$(datadir)/ubivat-tank-data
#utdata_DATA=blah_one.xml blah_two.xml
#utsysconfdir=$(prefix)$(sysconfdir)/ubivat-tank-sysconf
#utsysconf_DATA=blah_one.xml blah_two.xml
#utsharedstatedir=$(prefix)$(sharedstatedir)/ubivat-tank-sharedstat
#utsharedstate_DATA=blah_one.xml blah_two.xml
#utlocalstatedir=$(prefix)$(localstatedir)/ubivat-tank-localstate
#utlocalstate_DATA=blah_one.xml blah_two.xml
#utpkgdatadir=$(prefix)$(pkgdatadir)/ubivat-tank-pkgdata
#utpkgdata_DATA=blah_one.xml blah_two.xml


#utbindir      = $(bindir)/ut-bindir
#utbin_DATA    = blah_one.xml
#utbuilddir    = $(builddir)/ut-builddir
#utbuild_DATA    = blah_one.xml

#utdatadir     = $(datadir)/ut-datadir
#utdata_DATA    = blah_one.xml

#utdatadir     = $(datadir)/games/ubivat-tank/base
#utdata_DATA    = blah_one.xml

#utdatadir      = $(UTANKBASEDIR)/base
#utdata_DATA    = blah_one.xml

#ut_data_dir      = $(prefix)/share/games/ubivat-tank/base
#ut_data__DATA    = ./base/*

ut_base_data_dir      = $(prefix)/share/games/ubivat-tank/base
ut_base_data__DATA    = ./base/maps.lst ./base/palette.pal

ut_base_maps_data_dir      = $(prefix)/share/games/ubivat-tank/base/maps
ut_base_maps_data__DATA    = ./base/maps/*

ut_base_menu_data_dir      = $(prefix)/share/games/ubivat-tank/base/menu
ut_base_menu_data__DATA    = ./base/menu/*

ut_base_pics_data_dir      = $(prefix)/share/games/ubivat-tank/base/pics
ut_base_pics_data__DATA    = ./base/pics/*

#utdata_DATA    = blah_one.xml

#utdatarootdir = $(datarootdir)/ut-datarootdir
#utdataroot_DATA    = blah_one.xml
#utdocdir      = $(docdir)/ut-docdir
#utdoc_DATA    = blah_one.xml
#utdvidir      = $(dvidir)/ut-dvidir
#utdvi_DATA    = blah_one.xml
#uthtmldir     = $(htmldir)/ut-htmldir
#uthtml_DATA    = blah_one.xml
#utinfodir     = $(infodir)/ut-infodir
#utinfo_DATA    = blah_one.xml
#utlibdir      = $(libdir)/ut-libdir
#utlib_DATA    = blah_one.xml
#utlibexecdir  = $(libexecdir)/ut-libexecdir
#utlibexec_DATA    = blah_one.xml
#utlocaledir   = $(localedir)/ut-localedir
#utlocale_DATA    = blah_one.xml
#utlocalstatedir = $(localstatedir)/ut-localstatedir
#utlocalstate_DATA    = blah_one.xml
#utmandir        = $(mandir)/ut-mandir
#utman_DATA    = blah_one.xml
#utpdfdir        = $(pdfdir)/ut-pdfdir
#utpdf_DATA    = blah_one.xml
#utpsdir         = $(psdir)/ut-psdir
#utps_DATA    = blah_one.xml
#utsbindir       = $(sbindir)/ut-sbindir
#utsbin_DATA    = blah_one.xml
#utsharedstatedir = $(sharedstatedir)/ut-sharedstatedir
#utsharedstate_DATA    = blah_one.xml
#utsrcdir         = $(srcdir)/ut-srcdir
#utsrc_DATA    = blah_one.xml
#utsysconfdir     = $(sysconfdir)/ut-sysconfdir
#utsysconf_DATA    = blah_one.xml





