MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
src

ut_base_data_dir      = $(prefix)/share/games/ubivat-tank/base
ut_base_data__DATA    = base/maps.lst base/palette.pal

ut_base_maps_data_dir      = $(prefix)/share/games/ubivat-tank/base/maps
ut_base_maps_data__DATA    = base/maps/*

ut_base_menu_data_dir      = $(prefix)/share/games/ubivat-tank/base/menu
ut_base_menu_data__DATA    = base/menu/*

ut_base_pics_data_dir      = $(prefix)/share/games/ubivat-tank/base/pics
ut_base_pics_data__DATA    = base/pics/*

ut_base_sounds_explodes_data_dir   = $(prefix)/share/games/ubivat-tank/base/sounds/explodes
ut_base_sounds_explodes_data__DATA = base/sounds/explodes/*

ut_base_sounds_menu_data_dir   = $(prefix)/share/games/ubivat-tank/base/sounds/menu
ut_base_sounds_menu_data__DATA = base/sounds/menu/*

ut_base_sounds_music_data_dir   = $(prefix)/share/games/ubivat-tank/base/sounds/music
ut_base_sounds_music_data__DATA = base/sounds/music/*

ut_base_sounds_players_data_dir   = $(prefix)/share/games/ubivat-tank/base/sounds/players
ut_base_sounds_players_data__DATA = base/sounds/players/*

ut_base_sounds_walls_data_dir     = $(prefix)/share/games/ubivat-tank/base/sounds/walls
ut_base_sounds_walls_data__DATA   = base/sounds/walls/*

ut_base_sounds_weapons_artillery_data_dir   = $(prefix)/share/games/ubivat-tank/base/sounds/weapons/artillery
ut_base_sounds_weapons_artillery_data__DATA = base/sounds/weapons/artillery/*

ut_base_sounds_weapons_missile_data_dir     = $(prefix)/share/games/ubivat-tank/base/sounds/weapons/missile
ut_base_sounds_weapons_missile_data__DATA   = base/sounds/weapons/missile/*
