MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = ubivat-tank
SUBDIRS =

ubivat_tank_CFLAGS = -std=c11 -Wall -Wmissing-prototypes \
-D_GNU_SOURCE \
-I/usr/include/freetype2 \
-I/usr/include/freetype2/freetype

ubivat_tank_LDFLAGS =

ubivat_tank_SOURCES = \
Z_mem.c \
system.c \
eng_actions.c \
eng_conf.c \
video.c \
sound.c \
utf8.c \
types.c \
fonts.c \
_gr2D.c \
actions.c \
input.c \
think.c \
game.c \
img.c \
main.c \
map.c \
menu.c \
player.c \
weap.c
